# SmartWaterMeter

./: README.md
src/1hour/: CMakeCache.txt  CMakeLists.txt  CheckRes.cpp  KeyGen.cpp  Makefile  SGSimulation.hpp  Step1_CS1.cpp  Step2_TA1.cpp  Step3_CS2_1.cpp  Step3_CS2_2.cpp  Step4_TA2.cpp  Step5_CS3.cpp  Step5_CS3_1.cpp  Step5_CS3_2.cpp  Step6_TA3.cpp  Step7_CS4.cpp  Utility.hpp  cmake_install.cmake  run.sh
src/1hour/Key/: PublicKey  RelinKey  SecretKey
src/24hour/: CMakeCache.txt  CMakeLists.txt  KeyGen.cpp  MakeEncTab_1.cpp  MakeEncTab_2.cpp  MakeEncTab_3.cpp  Makefile  SGSimulation.hpp  Step1_CS1.cpp  Step2_TA1.cpp  Step3_CS2.cpp  Step4_TA2.cpp  Step5_CS3.cpp  Step6_TA3.cpp  Step7_CS4.cpp  Utility.hpp  cmake_install.cmake  script.py
src/24hour/Key/: Params  PublicKey  RelinKey  SecretKey
src/24hour/Table/: AM_input_150  AM_output_150  HM_input_150  HM_output_150
src/24hour/ctxt_res/: test2014.txt
src/24hour/ptxt_res/: test2014.txt
